# Quindar-Break-In-Communicator

./: .env.example  .gitignore  Cargo.toml  LICENSE  Quindar-Break-In-Developer_guide.md  README.md  install.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
