[package]
name = "quindar_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rodio = "0.19"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
dotenv = "0.15"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
